--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "dev": "tsx watch src/server.ts",
     "build": "tsc",
     "start": "node dist/server.js",
-    "typeorm": "tsx node_modules/typeorm/cli.js"
+    "typeorm": "tsx node_modules/typeorm/cli.js",
+    "test": "jest"
   },
   "keywords": [],
   "author": "",
@@ -18,9 +19,11 @@
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.2",
     "cors": "^2.8.5",
+    "D": "^1.0.0",
     "dotenv": "^17.2.0",
     "ejs": "^3.1.10",
     "express": "^5.1.0",
+    "jest": "30.0.4",
     "joi": "^17.13.3",
     "jsonwebtoken": "^9.0.2",
     "multer": "^2.0.1",
@@ -29,7 +32,8 @@
     "pg": "^8.16.3",
     "reflect-metadata": "^0.2.2",
     "swagger-ui-express": "^5.0.1",
-    "typeorm": "^0.3.25"
+    "typeorm": "^0.3.25",
+    "winston": "^3.17.0"
   },
   "devDependencies": {
     "@eslint/css": "^0.10.0",
