--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "build": "tsc",
     "start": "node dist/server.js",
     "typeorm": "tsx node_modules/typeorm/cli.js",
-    "test": "jest"
+    "test": "set NODE_OPTIONS=--experimental-vm-modules && jest"
   },
   "keywords": [],
   "author": "",
@@ -23,14 +23,14 @@
     "dotenv": "^17.2.0",
     "ejs": "^3.1.10",
     "express": "^5.1.0",
-    "jest": "30.0.4",
     "joi": "^17.13.3",
     "jsonwebtoken": "^9.0.2",
-    "multer": "^2.0.1",
+    "multer": "^2.0.2",
     "node-fetch": "^3.3.2",
     "openmeteo": "^1.2.0",
     "pg": "^8.16.3",
     "reflect-metadata": "^0.2.2",
+    "swagger-jsdoc": "^6.2.8",
     "swagger-ui-express": "^5.0.1",
     "typeorm": "^0.3.25",
     "winston": "^3.17.0",
@@ -49,7 +49,7 @@
     "@types/node": "^24.0.14",
     "eslint": "^9.31.0",
     "globals": "^16.3.0",
-    "jest": "^30.0.4",
+    "jest": "^30.0.5",
     "supertest": "^7.1.3",
     "ts-node": "^10.9.2",
     "ts-node-dev": "^2.0.0",
