--- a/tsconfig.json
+++ b/tsconfig.json
@@ -13,5 +13,5 @@
     "resolveJsonModule": true,
     "typeRoots": ["./types", "./node_modules/@types"]
   },
-  "include": ["src"]
+  "include": ["src", "jestpractice/jest.js", "jestpractice/jesttesting.test.js"]
 }
