--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "openmeteo": "^1.2.0",
     "pg": "^8.16.3",
     "reflect-metadata": "^0.2.2",
+    "swagger": "^0.0.1",
     "swagger-jsdoc": "^6.2.8",
     "swagger-ui-express": "^5.0.1",
     "typeorm": "^0.3.25",
@@ -47,6 +48,7 @@
     "@types/jsonwebtoken": "^9.0.10",
     "@types/multer": "^2.0.0",
     "@types/node": "^24.0.14",
+    "@types/swagger-ui-express": "^4.1.8",
     "eslint": "^9.31.0",
     "globals": "^16.3.0",
     "jest": "^30.0.5",
