--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@types/nodemailer": "^7.0.1",
     "axios": "^1.10.0",
     "bcrypt": "^6.0.0",
     "compression": "^1.8.1",
