--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "joi": "^17.13.3",
     "jsonwebtoken": "^9.0.2",
     "multer": "^2.0.2",
+    "node-cron": "^4.2.1",
     "openmeteo": "^1.2.0",
     "pg": "^8.16.3",
     "reflect-metadata": "^0.2.2",
